--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<meta name="theme-color" content="#e9edf4" />
-<title>Зоны от АНП — compact hearts</title>
+<meta name="theme-color" content="#1c1c1c" />
+<title>Зоны от АНП — compact hearts (Dark)</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 <style>
   :root{
-    --bg:#e9edf4; --ink:#2b2f36; --muted:#6e7785; --panel:#e9edf4;
+    --bg:#1c1c1c; --ink:#e9edf4; --muted:#a0a4ae; --panel:#2a2a2a;
     --accent:#EF233C;
-    --shadow-dark:#c8cdd6; --shadow-light:#ffffff; --radius:20px;
+    --shadow-dark:#121212; --shadow-light:#333333; --radius:20px;
   }
 
   *{box-sizing:border-box}
   html,body{height:100%; overflow-x:hidden;}
   body{
     margin:0; color:var(--ink); font-family:'Bebas Neue',system-ui,-apple-system,Roboto,Arial;
-    background: radial-gradient(1200px 900px at 50% -10%, #f5f8fc 0%, transparent 70%), var(--bg);
+    background: var(--bg);
     -webkit-tap-highlight-color: transparent; touch-action: manipulation;
   }
 
@@ -27,8 +27,8 @@
 
   .card{
     background:var(--panel); border-radius:24px; padding:12px;
-    box-shadow:12px 12px 24px var(--shadow-dark), -12px -12px 24px var(--shadow-light);
-    overflow:visible; /* фикс для модалки */
+    box-shadow:6px 6px 12px var(--shadow-dark), -6px -6px 12px var(--shadow-light);
+    overflow:visible; /* для модалки */
   }
 
   /* РАДАР */
@@ -37,7 +37,7 @@
   .heart{position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
          width:56px; height:56px; border-radius:50%; display:grid; place-items:center; color:#fff;
          background:radial-gradient(circle at 30% 30%, #ff5a6f, var(--accent));
-         box-shadow:0 8px 14px rgba(239,35,60,.22), inset 0 1px 0 rgba(255,255,255,.35);} 
+         box-shadow:0 8px 14px rgba(239,35,60,.35), inset 0 1px 0 rgba(255,255,255,.25);} 
   .heart:before{content:"❤"; font-size:22px;}
   .ecg-wrap{position:absolute; left:12px; right:12px; bottom:8px; height:38px;}
   svg.ecg{width:100%; height:100%}
@@ -58,7 +58,7 @@
     background:linear-gradient(180deg,#ff5a6f,var(--accent));
     border:none; color:#fff; text-align:center; padding:12px; border-radius:18px;
     display:flex; justify-content:center; align-items:center;
-    box-shadow:8px 8px 14px rgba(239,35,60,.2), -6px -6px 14px rgba(255,255,255,.6), inset 0 1px 0 rgba(255,255,255,.25);
+    box-shadow:0 0 12px rgba(239,35,60,.4);
     transition:transform .1s ease; cursor:pointer; width:100%; max-width:380px; font-size:16px; margin-top:6px;
   }
   .pressed{transform:scale(.97);} 
@@ -72,32 +72,37 @@
     border-radius:16px;
     padding:10px; text-align:center;
     display:flex; flex-direction:column; align-items:center; gap:4px;
-    box-shadow:6px 6px 12px var(--shadow-dark), -6px -6px 12px var(--shadow-light);
+    box-shadow:inset 2px 2px 6px var(--shadow-dark), inset -2px -2px 6px var(--shadow-light);
     cursor:pointer;
+    position: relative; /* для подсветки */
   }
 
   .tile.pulse{ animation:pulse 1.2s ease-in-out infinite; }
   @keyframes pulse{0%{ transform:scale(1);}50%{ transform:scale(1.02);}100%{ transform:scale(1);} }
 
+  /* полупрозрачная подсветка активной карточки */
+  .tile::after{ content:""; position:absolute; inset:0; border-radius:inherit; background:var(--accent); opacity:0; transition: opacity .2s ease; pointer-events:none; }
+  .tile.pulse::after{ opacity:.2; }
+
   .zone-row{display:flex; align-items:center; justify-content:center; gap:4px;}
   .zone-title{font-size:14px; color:var(--ink);} 
   .hearts{display:flex; gap:2px;}
-  .hearts span{ font-size:9px; line-height:1; color:#bbb; }
+  .hearts span{ font-size:9px; line-height:1; color:#666; }
   .hearts span.active{color:var(--accent);} 
   .zone-desc{font-size:13px; color:var(--muted);} 
   .num{font-size:20px; font-family:'Bebas Neue',sans-serif;}
 
   /* Кнопка подсказки */
-  .tile-red{grid-column:1 / -1; font-size:14px; margin-top:6px; background:linear-gradient(180deg,#ff5a6f,var(--accent)); border:none; color:#fff; text-align:center; padding:12px; border-radius:16px; display:flex; justify-content:center; align-items:center; box-shadow:8px 8px 14px rgba(239,35,60,.2), -6px -6px 14px rgba(255,255,255,.6), inset 0 1px 0 rgba(255,255,255,.25); transition:transform .1s ease; cursor:pointer;}
+  .tile-red{grid-column:1 / -1; font-size:14px; margin-top:6px; background:linear-gradient(180deg,#ff5a6f,var(--accent)); border:none; color:#fff; text-align:center; padding:12px; border-radius:16px; display:flex; justify-content:center; align-items:center; box-shadow:0 0 12px rgba(239,35,60,.4); transition:transform .1s ease; cursor:pointer;}
 
   /* Модалка */
-  .backdrop{position:fixed; inset:0; background:rgba(0,0,0,.25); display:none; align-items:center; justify-content:center;
+  .backdrop{position:fixed; inset:0; background:rgba(0,0,0,.55); display:none; align-items:center; justify-content:center;
             padding:18px; z-index:9999; opacity:0; transition:opacity .18s ease;}
   .backdrop.show{display:flex; opacity:1;}
   .modal{width:min(360px,100%); background:var(--panel); border-radius:20px; padding:14px 16px; text-align:left;
-         box-shadow:14px 14px 28px var(--shadow-dark), -14px -14px 28px var(--shadow-light);} 
+         box-shadow:0 0 20px rgba(0,0,0,.6);} 
   .modal header{display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:6px;}
-  .modal h3{font-size:18px; margin:2px 0;}
+  .modal h3{font-size:18px; margin:2px 0; color:var(--ink);}
   .modal .content{color:var(--muted); font-size:15px; line-height:1.3; max-height:50vh; overflow:auto;}
   .close{appearance:none; border:0; background:transparent; font-size:22px; cursor:pointer; color:var(--muted);} 
 </style>
@@ -212,9 +217,6 @@
       el.addEventListener('click', ()=> openInfo(i));
       grid.appendChild(el);
     });
-
-    pulseIndex = 0;
-    applyPulse(pulseIndex);
   }
 
   function applyPulse(idx){
@@ -223,7 +225,7 @@
     if(tiles[idx]) tiles[idx].classList.add('pulse');
   }
 
-  // === Общая функция открытия модалки (вешает крестик, фон, Esc) ===
+  // Общая функция модалки
   function openModal(title, html, advanceIndex){
     $('#modalTitle').textContent = title;
     $('#modalContent').innerHTML = html;
@@ -232,8 +234,14 @@
     const onClose = ()=>{
       $('#modal').classList.remove('show');
       if (typeof advanceIndex === 'number') {
-        const next = Math.min(advanceIndex + 1, 4);
-        applyPulse(next);
+        if (advanceIndex < 4) {
+          const next = Math.min(advanceIndex + 1, 4);
+          applyPulse(next);
+        } else {
+          // закрыли 5-ю — сбросить пульсацию в исходное состояние
+          const tiles = document.querySelectorAll('.tile');
+          tiles.forEach(t=>t.classList.remove('pulse'));
+        }
       }
       detach();
     };
@@ -269,16 +277,24 @@
 
   bindPress($('#doCalc'));
   bindPress($('#helpTile'));
-  $('#doCalc').addEventListener('click', render);
-  $('#anp').addEventListener('keydown', e=>{ if(e.key==='Enter') render(); });
+
+  // «Рассчитать»: пересчёт + старт пульсации с 1-й карточки
+  $('#doCalc').addEventListener('click', ()=>{
+    render();
+    pulseIndex = 0;
+    applyPulse(pulseIndex);
+  });
+
+  $('#anp').addEventListener('keydown', e=>{ if(e.key==='Enter'){ render(); pulseIndex=0; applyPulse(pulseIndex); } });
   $('#anp').addEventListener('focus', e=>{ if(!clearedOnce){ e.target.value=''; clearedOnce=true; } });
   $('#anp').addEventListener('blur', e=>{ if(!e.target.value){ e.target.value = lastValidANP; } });
 
-  // Нижняя кнопка — теперь тоже через общий openModal
+  // Нижняя кнопка — просто подсказка, без изменения пульсации
   $('#helpTile').addEventListener('click', ()=>{
     openModal('Как определить АНП', '<p>Беги 1 час максимально равномерно. Средний пульс за 60 минут — твой АНП.</p>');
   });
 
+  // Первый рендер (без пульсации)
   render();
 </script>
 </body>
