--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          box-shadow:0 0 20px rgba(0,0,0,.6);} 
   .modal header{display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:6px;}
   .modal h3{font-size:18px; margin:2px 0; color:var(--ink);}
-  .modal .content{color:var(--muted); font-size:15px; line-height:1.3; max-height:50vh; overflow:auto;}
+  .modal .content{color:var(--muted); font-size:14px; line-height:1.4; max-height:50vh; overflow:auto;}
   .close{appearance:none; border:0; background:transparent; font-size:22px; cursor:pointer; color:var(--muted);} 
 </style>
 </head>
@@ -169,8 +169,31 @@
   }
 
   function zoneInfo(i){
-    const infos=[
-      {title:'ЗОНА 1 — Восстановительная', html:'<p>Описание зоны 1…</p>'},
+    const infos = [
+      {
+        title: 'ЗОНА 1 — Восстановительная',
+        html: `
+          <p><strong>Первая пульсовая зона в беге</strong> — это самая лёгкая по интенсивности зона тренировок, которая ориентируется на низкий уровень сердечного ритма.</p>
+          <p><strong>Пульс:</strong> примерно 50–60% от максимального, зависит от возраста и индивидуальных особенностей.</p>
+          <p><strong>Ощущения:</strong> очень лёгкий бег, «разговорный темп» — можно спокойно разговаривать, не задыхаясь.</p>
+          <p><strong>Физиология:</strong></p>
+          <ul>
+            <li>мышцы работают в условиях полного обеспечения кислородом, молочная кислота практически не накапливается;</li>
+            <li>сердце укрепляется мягко — увеличивается ударный объём (за одно сокращение выталкивается больше крови), но без перегрузки;</li>
+            <li>улучшается экономичность дыхания, дыхательные мышцы работают без стресса;</li>
+            <li>включается парасимпатический отдел нервной системы → снижение стресса, улучшение восстановления и сна;</li>
+            <li>активируется липолиз (расщепление жиров), снижается уровень кортизола.</li>
+          </ul>
+          <p>Зона 1 — это зона восстановления и “фундаментальная база”. Она не делает вас быстрее напрямую, но позволяет организму адаптироваться и выдерживать более тяжёлые тренировки без перетренированности.</p>
+          <p><strong>Тренировки в этой зоне:</strong></p>
+          <ul>
+            <li>Восстановительные пробежки после тяжёлых тренировок или стартов.</li>
+            <li>Разминка и заминка (начала и окончания тренировки).</li>
+            <li>Длительные лёгкие пробежки для новичков.</li>
+            <li>Ходьба и бег трусцой для снижения стресса и наработки общей базы выносливости.</li>
+          </ul>
+        `
+      },
       {title:'ЗОНА 2 — Аэробная база', html:'<p>Описание зоны 2…</p>'},
       {title:'ЗОНА 3 — Пороговая', html:'<p>Описание зоны 3…</p>'},
       {title:'ЗОНА 4 — Субмаксимальная', html:'<p>Описание зоны 4…</p>'},
@@ -289,7 +312,7 @@
   $('#anp').addEventListener('focus', e=>{ if(!clearedOnce){ e.target.value=''; clearedOnce=true; } });
   $('#anp').addEventListener('blur', e=>{ if(!e.target.value){ e.target.value = lastValidANP; } });
 
-  // Нижняя кнопка — просто подсказка, без изменения пульсации
+  // Нижняя кнопка — подсказка, без изменения пульсации
   $('#helpTile').addEventListener('click', ()=>{
     openModal('Как определить АНП', '<p>Беги 1 час максимально равномерно. Средний пульс за 60 минут — твой АНП.</p>');
   });
@@ -299,7 +322,3 @@
 </script>
 </body>
 </html>
-
-
-
-
