--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="hint">уд/мин</div>
           </div>
           <input id="anp" class="input" type="number" min="60" max="220" value="165" inputmode="numeric" pattern="[0-9]*" />
-          <button class="btn-red" id="doCalc">Рассчитать мой анаэробный порог</button>
+          <button class="btn-red" id="doCalc">Рассчитать мои зоны пульса</button>
         </div>
 
         <div class="tiles" id="zonesGrid"></div>
