--- a/index.html
+++ b/index.html
@@ -313,13 +313,25 @@
     applyPulse(pulseIndex);
   });
 
-  $('#anp').addEventListener('keydown', e=>{ if(e.key==='Enter'){ render(); pulseIndex=0; applyPulse(pulseIndex); } });
+  $('#anp').addEventListener('keydown', e=>{
+    if(e.key==='Enter'){
+      render();
+      pulseIndex = 0;
+      applyPulse(pulseIndex);
+    }
+  });
   $('#anp').addEventListener('focus', e=>{ if(!clearedOnce){ e.target.value=''; clearedOnce=true; } });
   $('#anp').addEventListener('blur', e=>{ if(!e.target.value){ e.target.value = lastValidANP; } });
 
   // Нижняя кнопка — подсказка, без изменения пульсации
   $('#helpTile').addEventListener('click', ()=>{
-    openModal('Как определить АНП', '<p>Беги 1 час максимально равномерно. Средний пульс за 60 минут — твой АНП.</p>');
+    openModal(
+      'Как узнать свой анаэробный порог',
+      `
+      <p>Беги один час в максимально устойчивом темпе, который можешь выдержать на всём протяжении дистанции. Ваша цель — преодолеть за этот час максимально возможное расстояние. Если не получается всё время бежать, можно чередовать бег и шаг, но старайся поддерживать равномерную нагрузку.</p>
+      <p>Часовой бег — это простой полевой тест для оценки анаэробного порога. Суть в том, что спортсмен движется в течение 60 минут с максимально возможной устойчивой скоростью. Средний пульс за этот интервал будет соответствовать индивидуальной частоте сердечных сокращений на уровне анаэробного порога. Это доступный и бесплатный способ оценки без лабораторных тестов.</p>
+      `
+    );
   });
 
   // Первый рендер (без пульсации)
@@ -327,6 +339,7 @@
 </script>
 </body>
 </html>
+
 
 
        
