--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     return [
       {name:'ЗОНА 1',desc:'Восстановительная', val:`< ${r(anp*0.85)}`},
       {name:'ЗОНА 2',desc:'Аэробная',          val:`${r(anp*0.85)} – ${r(anp*0.95)}`},
-      {name:'ЗОНА 3',desc:'Пороговая',         val:`${r(anp*0.95)} – ${r(anp*1.05)}`},
-      {name:'ЗОНА 4',desc:'Субмаксимальная',   val:`${r(anp*1.05)} – ${r(anp*1.15)}`},
-      {name:'ЗОНА 5',desc:'Максимальная',      val:`> ${r(anp*1.15)}`}
+      {name:'ЗОНА 3',desc:'Темповая',         val:`${r(anp*0.95)} – ${r(anp*1.05)}`},
+      {name:'ЗОНА 4',desc:'Пороговая',   val:`${r(anp*1.05)} – ${r(anp*1.15)}`},
+      {name:'ЗОНА 5',desc:'интервальная VO₂max',      val:`> ${r(anp*1.15)}`}
     ];
   }
 
